@@ -10,6 +10,8 @@ Release 2.7.0 - UNRELEASED
 
     HDFS-7056. Snapshot support for truncate. (Plamen Jeliazkov and shv)
 
+    HDFS-7655. Expose truncate API for Web HDFS. (yliu)
+
   IMPROVEMENTS
 
     HDFS-7470. SecondaryNameNode need twice memory when calling
